Bug fix for independant validation

--- a/fc/res.ipynb
+++ b/fc/res.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
     "    val_batches_bar.update()\n",
     "    val_batch_losses = []\n",
     "    corrects = 0\n",
-    "    val_loader_data_count = len(test_dataloader.dataset)*test_dataloader.batch_size\n",
+    "    val_loader_data_count = len(test_dataloader.dataset)*test_dataloader.batch_size*3\n",
     "    model.eval()\n",
     "    for batch in test_dataloader:\n",
     "        x, y = batch\n",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd68ba58425149ae8d9c64f1dfd9e1d4",
+       "model_id": "5bd0939be03140e1a1758a5a65c34c65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -443,8 +443,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Val Loss: 0.9073\n",
-      "Accuracy: 0.3229\n"
+      "Val Loss: 0.8974\n",
+      "Accuracy: 0.1092\n"
      ]
     }
    ],
